# diogo_rf_screen_gdsfactory

./: .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
cells/: .gitignore  README.md
cells/cells/: passives.py
cells/design_data/factory/: cmim.ipynb  cmom.ipynb
cells/design_data/gds/: cmim_example.gds  cmom.gds  guard_ring_example.gds  rfcmim_example.gds
hello_diogo/: README.md
hello_diogo/design_data/factory/: hello_world.ipynb
hello_diogo/design_data/gds/: hello_diogo.gds
src/diogo_rf_screen_gdsfactory/: __init__.py
